[gd_scene load_steps=22 format=3 uid="uid://c4tk818om7dw3"]

[ext_resource type="Texture2D" uid="uid://lkm1i7m62cc0" path="res://images/skins/P2.png" id="1_8ps2a"]
[ext_resource type="Script" path="res://script/mvm_toupie2.gd" id="1_nlong"]
[ext_resource type="Texture2D" uid="uid://6qfm6ewxfn3" path="res://images/animation/choc_animation.png" id="3_q8of3"]
[ext_resource type="Texture2D" uid="uid://cfny5o8hr32um" path="res://images/invicibility_effect.png" id="4_wjos4"]
[ext_resource type="Texture2D" uid="uid://dc6080omtli1x" path="res://images/effet_toupie/piege_effect.png" id="5_acfdv"]
[ext_resource type="Texture2D" uid="uid://1jc4yg2ndrdf" path="res://images/trounoir_effect.png" id="5_lxdjn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3jid7"]
radius = 38.0132

[sub_resource type="AtlasTexture" id="AtlasTexture_lcytp"]
atlas = ExtResource("3_q8of3")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w35a"]
atlas = ExtResource("3_q8of3")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vtj7"]
atlas = ExtResource("3_q8of3")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgpmp"]
atlas = ExtResource("3_q8of3")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q5cf"]
atlas = ExtResource("3_q8of3")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gsxg"]
atlas = ExtResource("3_q8of3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kx56"]
atlas = ExtResource("3_q8of3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwcb5"]
atlas = ExtResource("3_q8of3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mc8b"]
atlas = ExtResource("3_q8of3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_647p7"]
atlas = ExtResource("3_q8of3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff3bm"]
atlas = ExtResource("3_q8of3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_edl6n"]
atlas = ExtResource("3_q8of3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bbhi"]
atlas = ExtResource("3_q8of3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vbmnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcytp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w35a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vtj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgpmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gsxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kx56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwcb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mc8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_647p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff3bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edl6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bbhi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Area_toupie2" type="Area2D"]
script = ExtResource("1_nlong")

[node name="htbx_toupie2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3jid7")
metadata/_edit_group_ = true

[node name="spr_toupie2" type="Sprite2D" parent="htbx_toupie2"]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("1_8ps2a")
metadata/_edit_group_ = true

[node name="effet_trounoir_toupie2" type="Timer" parent="."]
wait_time = 8.0

[node name="effet_piege_toupie2" type="Timer" parent="."]
wait_time = 8.0

[node name="effet_invincible_toupie2" type="Timer" parent="."]
wait_time = 10.0

[node name="spr_choc_animation" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_vbmnj")
speed_scale = 10.0

[node name="animation_choc_toupie2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="spr_invincible" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("4_wjos4")

[node name="spr_piege" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("5_acfdv")

[node name="spr_trou_noir" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("5_lxdjn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="effet_trounoir_toupie2" to="." method="_on_effet_trounoir_toupie_2_timeout"]
[connection signal="timeout" from="effet_piege_toupie2" to="." method="_on_effet_piege_toupie_2_timeout"]
[connection signal="timeout" from="effet_invincible_toupie2" to="." method="_on_effet_invincible_toupie_2_timeout"]
[connection signal="timeout" from="animation_choc_toupie2" to="." method="_on_animation_choc_toupie_2_timeout"]
